force-app/main/default/objects/CustomHelpText__c/CustomHelpText__c.object-meta.xml
<CustomObject>
    <description>เก็บค่า  Custom helper text</description>
    <label>Custom Help Text</label>
    <nameField>
        <displayFormat>CHTXT{000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Help Texts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>