force-app/main/default/objects/CustomHelpText__c/fields/HelpText__c.field-meta.xml
<CustomField>
    <fullName>HelpText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>