force-app/main/default/objects/CustomHelpText__c/fields/Screen__c.field-meta.xml
<CustomField>
    <fullName>Screen__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Screen</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>