force-app/main/default/objects/CustomHelpText__c/fields/SObject__c.field-meta.xml
<CustomField>
    <fullName>SObject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>